motif 1.01 / fix article read sidebar

--- a/motifdjango/.gitignore
+++ b/motifdjango/.gitignore
@@ -5,4 +5,9 @@
 !.elasticbeanstalk/*.global.yml
 
 # portrait file
+/media/images/portrait
+/media/images/portrait/
+/media/images/portrait/*
 media/images/portrait
+media/images/portrait/
+media/images/portrait/*
